--- a/swagger/index.html
+++ b/swagger/index.html
@@ -44,6 +44,7 @@
         url: "./swagger.json",
         dom_id: '#swagger-ui',
         deepLinking: true,
+        validatorUrl: null,
         presets: [
           SwaggerUIBundle.presets.apis,
           SwaggerUIStandalonePreset
